tests/snapshots/test_runner__tests__compiler__parse__expected_record_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: {x: Integer} = {x: 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/parse/expected_record_1.kk:1:28
  │
1 │   let x: {x: Integer} = {x: 2
  │ ╭───────────────────────────^
2 │ │
  │ ╰^ Syntax error: unexpected EOF (end of file)
  │
  = The expected token here is `abc`.

    We found this error when we are trying to parse a Record.
    Examples of Record are:

    Example #1:

      { x: 2 y: 3 }

    Example #2:

      let x = 1
      let y = 2
      { x y }
